# futures-live

./: .gitignore  PLAN_FUTURES_EXECUTOR.md  pyproject.toml
.claude/: settings.json
.claude/agents/: trade-safety-reviewer.md
.claude/hooks/: trade-safety-gate.sh
futures_executor/: cli.py  state.py
futures_executor/config/: loader.py  settings.yaml  strategies.yaml
futures_executor/data/: bar_fetcher.py  contract_resolver.py
futures_executor/execution/: broker.py  order_manager.py  safety.py
futures_executor/monitoring/: audit.py  notifier.py  snapshot.py
futures_executor/strategy/: aggregator.py
scripts/: backup_db.sh  close_rogue_mcl_legs.py  daily_cycle.sh  heartbeat_check.sh  monitor_cycle.sh  onboard_account.sh  probe_ibkr_account.py  run_daily.sh  setup_cron.sh
tests/: test_aggregator.py  test_broker.py  test_contract_resolver_tradable.py  test_late_fill_reconciler.py  test_off_session_reconciler.py  test_order_manager_close_contract.py  test_safety_circuit.py  test_snapshot.py  test_stranded_position_migration.py  test_venue_state_cancel.py
