[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futures-executor"
version = "0.1.0"
description = "Live futures executor for IBKR"
requires-python = ">=3.11"
dependencies = [
    "ib_insync>=0.9.86",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pyarrow>=14.0",
]

[project.scripts]
futures-executor = "futures_executor.cli:main"

[tool.setuptools.packages.find]
include = ["futures_executor*"]
